fix reactive spacing of hidden content in careers page

--- a/css/careerStyle.css
+++ b/css/careerStyle.css
@@ -158,26 +158,24 @@
     display: flex;
     position: relative;
     margin-top:1%;
-    width: 85%;
+    height:42vh;
+    width: 90%;
+    left: 5%;
   }
   
   .body-left {
-    display: flex;
-    max-height: 100%;
+    height: 100%;
+    width: 100%;
     padding-right: 2vw;
     width: 30%;
+    object-fit: contain;
+    object-position: top;
   }
   
   .body-right {
     max-height: 100%;
     padding-left: 2vw;
     width: 70%;
-  }
-
-  .body-image {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%;
   }
   
   .body-text {
